server.goにインスタンスをうまく入れたらsignupOK
