# docs/api-document.yaml
@@ -19,6 +19,7 @@ paths:
         - user
       summary: "Sign up a new user"
       description: "Allows a new user to sign up using their email and password."
+      security: [] # No security required
       requestBody:
         required: true
         content:
@@ -27,6 +28,7 @@ paths:
               $ref: "#/components/schemas/SignUpRequest"
             example:
               email: "new@ex.com"
+              name : "newUser"
               password: "password"
       responses:
         "200":
@@ -37,9 +39,6 @@ paths:
                 $ref: "#/components/schemas/SignUpResponse"
               example:
                 message: "User successfully signed up"
-                user:
-                  id: 12345
-                e mail: "newuser@example.com"
         "400":
           $ref: "#/components/responses/BadRequest"
         "500":
@@ -61,6 +60,7 @@ components:
           example: "securepassword"
       required:
         - email
+        - name
         - password
     SignUpResponse:
       type: object
